sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: '=' expected but ';' found.
	var i;
             ^AlgInsertionSort:5: error: '=' expected but ';' found.
	var v;
             ^AlgInsertionSort:8: error: '=' expected but ';' found.
		var j;
                     ^